# cs542_final-project

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  fake_data.py  schema.sql
src/: database.rs  env.rs  error.rs  forms.rs  main.rs  session.rs  templates.rs
src/routes/: errors.rs  mod.rs  products.rs  render_routes.rs  tests.rs  user.rs
src/scraper/: api.rs  mod.rs  offer.rs  price.rs  product.rs  rate_limit.rs
src/templates/: mod.rs  url_for.rs
templates/: 404.html.tera  about.html.tera  base.html  base.html.tera  basic.html.tera  historic.html.tera  index.html  index.html.tera  login.html.tera  register.html.tera
