[package]
name = "cs542_group_project"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio/rt-multi-thread", "reqwest/json", "reqwest/rustls-tls", "serde/derive",
    "log/max_level_debug", "log/release_max_level_info", "rocket/json", "rocket/secrets", "sqlx/uuid", "uuid/v4",
    "rocket_dyn_templates/tera", "reqwest/gzip", "reqwest/stream", "sqlite"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio-rustls", "rusqlite"]

# The documentation of each dependency can be found at https://crates.io/crates/<name>
[dependencies]
# Web framework used in this project
rocket = "0.5.0-rc.2"

# Async/await runtime which manages execution of incomming request handling
tokio = "1.25.0"
futures = "0.3.27"

# Database library, UUID generation, and .env config for database connection
sqlx = "0.6"
uuid = "1"
dotenvy = "0.15.6"

# SHA256 implementation for hashing passwords
sha2 = "0.10.6"
digest = "0.10.6"

# Logging
log = "0.4"
pretty_env_logger = "0.4"

# serializing/deserializing input data as well as input validation
serde = "1.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"

# Templating
rocket_dyn_templates = "0.1.0-rc.2"
tera = "1.10"

# HTTP/HTTPS client for sending requests to Amazon
reqwest = "0.11.14"
select = "0.6.0"
html5ever = "0.26.0"


[dev-dependencies]
serial_test = "1.0.0"
rand = "0.8.5"


[build-dependencies]
# This is the same sqlite library used internally by sqlx.
# I included it to create local.sqlite from the schema.sql before building the rest of the project.
rusqlite = { version = "*", optional = true }
sha2 = "0.10.6"
digest = "0.10.6"
uuid = "1"
